--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ header {
 }
 .digitalclock {
     color: rgba(255, 249, 240, 0.65);
-    text-shadow: 0px 0px 60px rgb(255, 0, 153);
+    text-shadow: 0px 0px 60px rgb(21, 255, 0);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -53,8 +53,23 @@ footer {
     background-color: black;
 }
 
-@media only screen and (max-width: 479px) {
+@media only screen and (max-width: 467px) {
     header {
         color: white;
+    }
+    .digitalclock {
+        color: red;
+        text-shadow: 0px 0px 60px red;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        margin-top: 2em;
+        font-size: 200%;
+        text-align: center;
+    }
+    footer {
+        padding: 1.5em 0;
+        color: rgb(230, 230, 230);
+        font-size: 125%;
     }
 }
